# Automaton-Auditor-TRP

./: .env.example  .gitignore  Architecture.md  README.md  main.py  pyproject.toml
reports/: interim_report.md
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
week2_exercises/: Asking_Good_Questions.md
